# llm-monorepo

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: python-app.yml
foodrecognition/: pyproject.toml
foodrecognition/src/: main.py
shared/: pyproject.toml
shared/src/shared/: this.py
shared/src/shared/tools/: google_search.py
shared/tests/utils/: test_this.py
