[project]
name = "shared"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ranjun" }
]
requires-python = ">=3.13"
dependencies = []

#[build-system]
#requires = ["uv_build>=0.8.13,<0.9.0"]
#build-backend = "uv_build"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.build.targets.wheel]
packages = ["src/shared"] # 声明源码位置